Bug 304791 - Aurorae ignores 'Window title' font setting
Summary: Aurorae ignores 'Window title' font setting
Status: RESOLVED FIXED
Alias: None
Product: kwin
Classification: Plasma
Component: aurorae (other bugs)
Version First Reported In: 4.9.0
Platform: unspecified Linux
: NOR normal
Target Milestone: 4.9.1
Assignee: Martin Flöser
URL: https://git.reviewboard.kde.org/r/105...
Keywords: regression
: 305445 (view as bug list)
Depends on:
Blocks:
 
Reported: 2012-08-08 12:16 UTC by cvnnxs
Modified: 2012-08-20 15:25 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 4.9.1
Sentry Crash Report:
mgraesslin: ReviewRequest+


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description cvnnxs 2012-08-08 12:16:39 UTC
In the 4.9.0 version of Aurorae (Kubuntu 12.04 backports PPA build), the 'Window title' font setting in 'Application Appearance' is ignored and the 'General' font is used for window titles instead.
Comment 1 Martin Flöser 2012-08-08 20:50:55 UTC
Mostly fixed in the generic QML support for Aurorae for 4.10. Should be easy to backport these parts.
Comment 2 Martin Flöser 2012-08-17 15:54:48 UTC
Git commit 1dfee11211dc06da497659e6cc14c7697dff063c by Martin Gräßlin.
Committed on 09/08/2012 at 09:44.
Pushed by graesslin into branch 'KDE/4.9'.

Honor the decoration font in Aurorae

Adding two properties to the AuroraeFactory to read the active
and inactive title font.
FIXED-IN: 4.9.1
REVIEW: 105956

M  +13   -0    kwin/clients/aurorae/src/aurorae.cpp
M  +6    -0    kwin/clients/aurorae/src/aurorae.h
M  +1    -0    kwin/clients/aurorae/src/qml/aurorae.qml

http://commits.kde.org/kde-workspace/1dfee11211dc06da497659e6cc14c7697dff063c
Comment 3 Thomas Lübking 2012-08-20 10:21:45 UTC
*** Bug 305445 has been marked as a duplicate of this bug. ***
Comment 4 Christoph Feck 2012-08-20 15:25:00 UTC
*** Bug 305445 has been marked as a duplicate of this bug. ***